fix: update package.json

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "egg-mock": "^3.13.0",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^5.1.0",
-    "should": "^13.2.1",
     "webstorm-disable-index": "^1.2.0"
   },
   "engines": {
@@ -41,9 +40,10 @@
     "autod": "autod"
   },
   "files": [
-    "app.js",
-    "agent.js",
-    "config"
+    "app",
+    "config",
+    "template",
+    "app.js"
   ],
   "ci": {
     "version": "8, 9"
